# Information-Relation-Indexing

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
docs/: architecture.md  extraction-contract.md
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-panel.tsx  graph-canvas.tsx  ingestion-console.tsx  node-inspector.tsx  workbench.tsx
frontend/hooks/: use-telemetry-socket.ts
frontend/lib/: api.ts  graph.test.ts  graph.ts  ndjson.test.ts  ndjson.ts  types.ts
frontend/store/: workbench.test.ts  workbench.ts
migrations/: env.py
migrations/versions/: 20260704_0001_initial_dri_schema.py
src/iri/: __init__.py  constants.py  main.py
src/iri/api/: dependencies.py  schemas.py
src/iri/core/: config.py  logging.py
src/iri/db/: __init__.py  models.py  session.py
src/iri/domain/: __init__.py  extraction.py
src/iri/embeddings/: __init__.py  base.py  gemini.py
src/iri/extraction/: __init__.py  files.py  gemini.py
src/iri/generation/: __init__.py  base.py  gemini.py
src/iri/graph/: __init__.py  gateway.py  models.py
src/iri/repositories/: postgres.py
src/iri/services/: __init__.py  graph_snapshot.py  ingestion.py  ingestion_processor.py  retrieval.py
tests/: test_answer_generation.py  test_api.py  test_embeddings.py  test_extraction_contract.py  test_ingestion_extraction.py  test_models.py
tests/fixtures/: live-test-financial-policy.txt  live-test-policy.txt
(+5 files in other folders)
